# aws-lambda-ocaml

./: .gitignore  README.md  aws-lambda-runtime.opam  aws-lambda.opam  example.opam
aws-lambda-runtime/src/: bootstrap.ml  dune  http.ml  lambdaClient.ml
aws-lambda/src/: bootstrap.ml  dune
example/src/: dune  example.ml
